# upspin

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  fix.patch  go.mod  go.sum  test-curl.js  test-curl2.js
.Jules/: palette.md
.bcr/: attestations.template.json  config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bazel.yml  publish-bcr.yml  publish.yml  tag-and-release.yml  test.yml  tests.yml
.jules/: bolt.md  sentinel.md
access/: BUILD.bazel
bind/: BUILD.bazel  bind.go  redirection_test.go
cache/: BUILD.bazel
client/: BUILD.bazel
client/clientutil/: BUILD.bazel  readall.go
client/file/: BUILD.bazel
cloud/https/: BUILD.bazel  https.go
cloud/mail/: BUILD.bazel
cloud/mail/sendgrid/: BUILD.bazel
cloud/storage/: BUILD.bazel
cloud/storage/disk/: BUILD.bazel
cloud/storage/disk/internal/local/: BUILD.bazel
cloud/storage/storagetest/: BUILD.bazel
cmd/cacheserver/: BUILD.bazel  main.go
cmd/cacheserver/cacheutil/: BUILD.bazel
cmd/dirserver/: BUILD.bazel
cmd/frontend/: BUILD.bazel
cmd/keyserver/: BUILD.bazel
cmd/local_keyserver/: BUILD.bazel  main.go  persistent_test.go
cmd/storeserver/: BUILD.bazel
cmd/upbox/: BUILD.bazel
cmd/upspin/: BUILD.bazel  signup.go
cmd/upspin-audit/: BUILD.bazel
cmd/upspin-setupstorage/: BUILD.bazel
cmd/upspinfs/: BUILD.bazel  main_windows.go  upspinfs_test.go
cmd/upspinfs/internal/ose/: BUILD.bazel
cmd/upspinserver/: BUILD.bazel
config/: BUILD.bazel  initconfig.go  initconfig_test.go
containers/: BUILD.bazel  transition.bzl
dir/dircache/: BUILD.bazel
dir/inprocess/: BUILD.bazel
dir/remote/: BUILD.bazel
dir/server/: BUILD.bazel
dir/server/serverlog/: BUILD.bazel
dir/server/tree/: BUILD.bazel
dir/unassigned/: BUILD.bazel
doc/: index.md
doc/revival/: local-keyserver.md  local_keyserver.md
doc/templates/: base.tmpl  doc.tmpl
errors/: BUILD.bazel  debug.go  debug_stub.go  debug_test.go  errors.go  errors_test.go  example_test.go
factotum/: BUILD.bazel
flags/: BUILD.bazel  flags.go
key/inprocess/: BUILD.bazel  key.go
key/keygen/: BUILD.bazel
key/proquint/: BUILD.bazel
key/remote/: BUILD.bazel  remote.go
key/server/: BUILD.bazel
key/sha256key/: BUILD.bazel
key/transports/: BUILD.bazel
key/unassigned/: BUILD.bazel
key/usercache/: BUILD.bazel
log/: BUILD.bazel
metric/: BUILD.bazel
pack/: BUILD.bazel
pack/ee/: BUILD.bazel
pack/eeintegrity/: BUILD.bazel
pack/internal/: BUILD.bazel
pack/internal/packtest/: BUILD.bazel
pack/packutil/: BUILD.bazel
pack/plain/: BUILD.bazel  plain_test.go
path/: BUILD.bazel
rpc/: BUILD.bazel  all_test.go  server.go
rpc/dirserver/: BUILD.bazel
rpc/keyserver/: BUILD.bazel
rpc/local/: BUILD.bazel
rpc/storeserver/: BUILD.bazel
rpc/testdata/: BUILD.bazel  proto.go  testserver.pb.go  testserver.proto
serverutil/: BUILD.bazel
serverutil/dirserver/: BUILD.bazel
serverutil/frontend/: BUILD.bazel  frontend.go
serverutil/keyserver/: BUILD.bazel  main.go
serverutil/perm/: BUILD.bazel
serverutil/signup/: BUILD.bazel
serverutil/storeserver/: BUILD.bazel
serverutil/upspinserver/: BUILD.bazel  main.go
serverutil/web/: BUILD.bazel  web.go
shutdown/: BUILD.bazel
store/inprocess/: BUILD.bazel
store/remote/: BUILD.bazel
store/server/: BUILD.bazel  server_test.go
store/storecache/: BUILD.bazel
store/transports/: BUILD.bazel
store/unassigned/: BUILD.bazel
subcmd/: BUILD.bazel  server.go
test/: BUILD.bazel  integration_test.go
test/servermux/: BUILD.bazel
test/testenv/: BUILD.bazel
test/testfixtures/: BUILD.bazel
test/testutil/: BUILD.bazel  testutil.go
transports/: BUILD.bazel  transports.go
upbox/: BUILD.bazel  bazel_test.go  schema.go
upspin/: BUILD.bazel  code.go  endpoint.go  upspin.go
upspin/proto/: BUILD.bazel  upspin.pb.go
user/: BUILD.bazel
valid/: BUILD.bazel
version/: BUILD.bazel
