load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix upspin.io
# gazelle:go_proto_compilers @rules_go//proto:go_proto
# gazelle:go_grpc_compilers @rules_go//proto:go_proto
# gazelle:resolve proto proto upspin.io/upspin/proto/upspin.proto //upspin/proto:proto_proto
# gazelle:resolve proto go upspin.io/upspin/proto/upspin.proto //upspin/proto:proto_go_proto

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
