# SPDX-License-Identifier: Apache-2.0

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# All binaries from //cmd/...
BINARIES = [
    "//cmd/cacheserver",
    "//cmd/dirserver",
    "//cmd/frontend",
    "//cmd/keyserver",
    "//cmd/local_keyserver",
    "//cmd/storeserver",
    "//cmd/upbox",
    "//cmd/upspin",
    "//cmd/upspin-audit",
    "//cmd/upspin-setupstorage",
    "//cmd/upspinfs",
    "//cmd/upspinserver",
]

pkg_tar(
    name = "binaries_tar",
    srcs = BINARIES,
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "image",
    base = "@distroless_static",
    tars = [":binaries_tar"],
)

oci_image_index(
    name = "image_index",
    images = [
        ":image",
    ],
    platforms = [
        "@rules_go//go/toolchain:linux_amd64",
        "@rules_go//go/toolchain:linux_arm64",
    ],
)

oci_push(
    name = "push",
    image = ":image_index",
    remote_tags = ["latest"],
    repository = "index.docker.io/filipfilmar/upspin",
)
