load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "path",
    srcs = ["path.go"],
    importpath = "upspin.io/path",
    visibility = ["//visibility:public"],
    deps = [
        "//upspin",
        "//user",
    ],
)

go_test(
    name = "path_test",
    srcs = ["path_test.go"],
    embed = [":path"],
    deps = ["//upspin"],
)
