load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "frontend_lib",
    srcs = ["frontend.go"],
    importpath = "upspin.io/cmd/frontend",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/https",
        "//serverutil/frontend",
    ],
)

go_binary(
    name = "frontend",
    embed = [":frontend_lib"],
    visibility = ["//visibility:public"],
)
